--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.11.3",
+    "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.3.4",
     "@mui/icons-material": "^5.15.7",
     "@mui/joy": "^5.0.0-beta.25",
+    "@mui/material": "^5.15.11",
     "@mui/x-date-pickers": "^6.19.3",
     "@reduxjs/toolkit": "^2.1.0",
     "@testing-library/jest-dom": "^5.17.0",
@@ -26,10 +27,12 @@
     "mui-tel-input": "^5.0.0",
     "nookies": "^2.5.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.1",
     "react-datepicker": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
     "react-image-gallery": "^1.3.0",
+    "react-number-format": "^5.3.3",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
